# cpp-sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fail.cpp  loop_unroller.h  main.cpp  static_fail.cmake
compile-failure-tests/: CMakeLists.txt
static-loop-unrollers/: CMakeLists.txt  loop_unroller.h  loop_unroller_examples.cpp
streams-gcc-bug/: CMakeLists.txt  compile.txt  main.cpp
template-specialization/: CMakeLists.txt  main.cpp
